Consider modified modules initialized [Bug #18185]