eval.c
@@ -424,6 +424,9 @@ rb_class_modify_check(VALUE klass)
     if (SPECIAL_CONST_P(klass)) {
 	Check_Type(klass, T_CLASS);
     }
+    if (RB_TYPE_P(klass, T_MODULE)) {
+        rb_module_set_initialized(klass);
+    }
     if (OBJ_FROZEN(klass)) {
 	const char *desc;
 
